Bug 287259 - [USABILITY] No, I don't want to know who the hell is 5ec1ecc3-aefe-4b65-87d5-092277ca4753
Summary: [USABILITY] No, I don't want to know who the hell is 5ec1ecc3-aefe-4b65-87d5-...
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: kioslave - nepomuksearch (other bugs)
Version First Reported In: git master
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
: 283687 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-22 14:02 UTC by Alejandro Nova
Modified: 2013-01-11 23:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alejandro Nova 2011-11-22 14:02:51 UTC
Version:           git master (using Devel) 
OS:                Linux

When I look for a contact in a Nepomuk runner, a nice popup appears telling me about his name, and his existance as a real person. However, sometimes, when I want to look for documents associated with him/her, a Dolphin window appears, telling me this:

nepomuk - 5ec1ecc3-aefe-4b65-87d5-092277ca4753 - Dolphin.

Can you elaborate and tell me more about my contact in the title bar? UUID reading classes are so expensive these days...

Reproducible: Always

Steps to Reproduce:
1. Look for a contact in KRunner with Nepomuk runners
2. Open the contact.
3. Watch Dolphin titlebar.

Actual Results:  
You get that as a title bar.

Expected Results:  
You get the name of your contact as your titlebar, just like it just appeared before in KRunner.
Comment 1 Alejandro Nova 2011-12-09 04:14:16 UTC
Related to this: when I look for someone, wishing to find some data associated with him/her, the following information appears.

1. In KRunner: the name of the person I'm looking for, and, as the description, PersonContact. Yes, it's useful for a programmer to know that the entry is a PersonContact, but it's useless and confusing for me as an user.

2. I click in the name and I get a Dolphin window. The Dolphin window shows:
- As the titlebar: nepomuk - e2a3e247-526e-4aa7-958c-91fcc174039a – Dolphin
- As the content: some e-mails and a Nepomuk entry. All things are showing their Nepomuk or Akonadi codenames: mails show themselves as: akonadi_3A_3Fitem_3D6666. There are also Nepomuk entries in the form: nepomuk_3A_2Fres_2F6a1ba744-0f7c-4115-8c05-ec4a1c0a2fc8 . I don't know what's that.

3. If I click on a mail, KMail opens.


What should happen:

1. The name of the person I'm looking for has a human readable and translatable description (John Doe as the name, Contact as the description, for instance)

2. The folder must say something like "Data associated to John Doe".

3. If it's a mail, you display the subject. If it's a file, you display the filename. But please, I don't want to know the raw Akonadi ID or the raw Nepomuk ID of my data.

Nepomuk is great, but these are serious usability bugs.
Comment 2 Vishesh Handa 2012-07-11 15:11:48 UTC
*** Bug 283687 has been marked as a duplicate of this bug. ***
Comment 3 Vishesh Handa 2013-01-11 20:09:33 UTC
Git commit 7e0c1a487ad29e30c79dc8b7a17a210cf63c244a by Vishesh Handa.
Committed on 09/01/2013 at 16:23.
Pushed by vhanda into branch 'KDE/4.10'.

NepomukRunner: Redirect the 'nepomuk:/res/uuid' urls before opening them

The nepomuksearch kioslave has a special syntax which results in the the
searched term being displayed in "human terms" without the need for
stating the url. The nepomuk kioslave does not have this feature. It,
however, uses the nepomuksearch kioslave internally.

Applications like Dolphin often do not stat a url before displaying it
in the title bar. This results in users seing an ugly "nepomuk - res -
uuid" in the title bar instead of the proper display name as set in the
UDSEntry.

In order to avoid this ugly title bar, we manually redirect all nepomuk
urls to nepomuksearch before they are opened by the runner.

It's a hack, but it works!
REVIEW: 108305

M  +49   -2    plasma/generic/runners/nepomuksearch/nepomuksearchrunner.cpp

http://commits.kde.org/kde-workspace/7e0c1a487ad29e30c79dc8b7a17a210cf63c244a
Comment 4 Anders Lund 2013-01-11 23:59:02 UTC
Yay! :-) <3