plasma/generic/runners/nepomuksearch/nepomuksearchrunner.cpp
@@ -28,14 +28,18 @@
 #include <KDebug>
 #include <KUrl>
 
-#include <nepomuk2/nie.h>
-#include <nepomuk2/nfo.h>
 #include <Nepomuk2/File>
 #include <Nepomuk2/Resource>
 #include <Nepomuk2/Variant>
 #include <Nepomuk2/ResourceManager>
 #include <Nepomuk2/Query/ResultIterator>
 #include <Nepomuk2/Query/QueryParser>
+#include <Nepomuk2/Query/ResourceTerm>
+#include <Nepomuk2/Query/ComparisonTerm>
+
+#include <Nepomuk2/Vocabulary/NIE>
+#include <Nepomuk2/Vocabulary/NFO>
+#include <Soprano/Vocabulary/NAO>
 
 #include <KFileItemActions>
 #include <KFileItemList>
@@ -47,6 +51,7 @@
 #include <KService>
 
 using namespace Nepomuk2::Vocabulary;
+using namespace Soprano::Vocabulary;
 
 namespace {
     /**
@@ -133,6 +138,41 @@ void Nepomuk2::SearchRunner::match( Plasma::RunnerContext& context )
     }
 }
 
+namespace {
+    // Copied from kde-runtime/nepomuk/kioslaves/kio_nepomuk.cpp
+    /**
+     * This function constructs the url the nepomuk kioslave would redirect to.
+     * We use this instead of just supplying the nepomuk kioslave with the url because
+     * applications like Dolphin display the url on the title bar even though the
+     * 'display name' would be set cause that would involve stating the file.
+     *
+     * Therefore, in order to avoid showing an ugly 'nepomuk:/res/uuid' to the user we
+     * redirect the url ourselves so we have a pretty representation.
+     */
+    KUrl redirectionUrl(const Nepomuk2::Resource& res) {
+        using namespace Nepomuk2;
+
+        // list tags by listing everything tagged with that tag
+        if (res.hasType(NAO::Tag())) {
+            Query::ComparisonTerm term(NAO::hasTag(), Query::ResourceTerm( res ), Query::ComparisonTerm::Equal);
+            KUrl url = Query::Query(term).toSearchUrl(i18n( "Things tagged '%1'", res.genericLabel()));
+            url.addQueryItem(QLatin1String("resource"), KUrl(res.uri()).url());
+            return url;
+        }
+
+        // list everything else besides files by querying things related to the resource in some way
+        // this works for music albums or artists but it would also work for tags
+        else if (!res.hasType(NFO::FileDataObject())) {
+            Query::ComparisonTerm term(QUrl(), Query::ResourceTerm(res), Query::ComparisonTerm::Equal);
+            KUrl url = Query::Query(term).toSearchUrl(res.genericLabel());
+            url.addQueryItem(QLatin1String("resource"), KUrl(res.uri()).url());
+            return url;
+        }
+
+        // no forwarding done
+        return KUrl();
+    }
+}
 
 void Nepomuk2::SearchRunner::run( const Plasma::RunnerContext&, const Plasma::QueryMatch& match )
 {
@@ -150,6 +190,13 @@ void Nepomuk2::SearchRunner::run( const Plasma::RunnerContext&, const Plasma::Qu
     KUrl nieUrl = res.property( NIE::url() ).toUrl();
     if( !nieUrl.isEmpty() )
         url = nieUrl;
+
+    // Redirect it in order to avoid showing the user an ugly URL
+    if(url.scheme() == QLatin1String("nepomuk")) {
+        KUrl newUrl = redirectionUrl(res);
+        if(newUrl.isValid())
+            url = newUrl;
+    }
 
     KService::Ptr preferredServicePtr;
     if (res.hasProperty(Nepomuk2::Vocabulary::NIE::mimeType()) &&
